Refactored SQS test - native image execution (#375)
* Refactored 'micronaut-tasks-sqs' test, so it can be executed in native image

* Replaced SqsClientFactory from micronaut-aws with custom SqsClientFactory which uses config values from sqs container created by micronaut-test-resources